--- a/nes-lter-ifcb-transect-winter-2018-eml.Rmd
+++ b/nes-lter-ifcb-transect-winter-2018-eml.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "NES-LTER IFCB Transect Winter 2018"
 author: "Stace Beaulieu"
-date: "22 April 2020"
+date: "24 April 2020"
 output: html_document
 ---
 
@@ -44,7 +44,12 @@ This is not necessary for test csv files
 # level1b <- read_csv("project_folder/level1b_test.csv")
 # level2 <- read_csv("project_folder/level2_test.csv")
 
-level1b <- read_csv("https://github.com/klqi/EDI-NES-LTER-2019/raw/f040f31c290ff40baf9a48c9ce2dd57b46336900/auto_join/level_1b_manual.csv")  # does not account for 7 ROIs with features zero
+# level1b <- read_csv("https://github.com/klqi/EDI-NES-LTER-2019/raw/f040f31c290ff40baf9a48c9ce2dd57b46336900/auto_join/level_1b_manual.csv")  # does not account for 7 ROIs with features zero
+level1b <- read_csv("https://github.com/klqi/EDI-NES-LTER-2019/raw/d61d55de36137e94bfafa94c080849f4554e5df6/auto_join/level_1b_manual.csv") # accounts for 7 ROIs with features zero
+# view summary stats to ensure no features zero
+summary(level1b)
+# check for 7 NAs
+checkNAlevel1b <- level1b %>% filter(is.na(Area))
 
 # level1b needs an occurrenceID
 # make a copy of the column
@@ -65,7 +70,14 @@ level1b$eventID <- gsub("(IFCB102).*", "\\1", level1b$eventID)
 
 # need level 2 data to be able to add columns required for OBIS occurrence table
 # eventDate, decimalLatitude, decimalLongitude, depth
-level2 <- read_csv("https://github.com/klqi/EDI-NES-LTER-2019/raw/f040f31c290ff40baf9a48c9ce2dd57b46336900/plot1/level_2_manual.csv")
+# level2 <- read_csv("https://github.com/klqi/EDI-NES-LTER-2019/raw/f040f31c290ff40baf9a48c9ce2dd57b46336900/plot1/level_2_manual.csv") # does not account for 7 ROIs with features zero
+level2 <- read_csv("https://github.com/klqi/EDI-NES-LTER-2019/raw/d61d55de36137e94bfafa94c080849f4554e5df6/plot1/level_2_manual.csv") # changed zero features to NaN commit d61d55d
+
+# make sure sum of level2 abundance equals the number of ROIs in level1b
+sum(level2$Abundance)
+# view summary stats
+summary(level2)
+
 # rename level2 columns to eventDate, decimalLatitude, decimalLongitude, higherClassification_group
 level2 <- rename(level2, eventDate = date)
 level2 <- rename(level2, decimalLatitude = gps_furuno_latitude)
@@ -119,6 +131,8 @@ for (i in undersampledTriggerFluor) {
 level2 %>% mutate(concentrationFlag = replace(concentrationFlag, data_provider_category_HumanObservation == i, 0)) -> level2
 }
 
+# Level 2 round volume_imaged to 3 past decimal
+level2$volume_imaged <- round(level2$volume_imaged, digits = 3)
 
 ```
 
@@ -139,6 +153,30 @@ map_locs(df = level1bEDI, xvar = "decimalLongitude", yvar = "decimalLatitude",
 # level 2
 map_locs(df = level2, xvar = "decimalLongitude", yvar = "decimalLatitude",
          region = "transect", colorvar = NULL)
+
+```
+
+## Additional quality assurance for data values
+
+```{r}
+# these steps in addition to summary stats when reading in data tables
+
+# level 1b all occurrenceIDs must be unique
+length(unique(level1bEDI$occurrenceID))
+
+# level 1b minFeret, sqrt area, and cube root biovolume should be < 150 micron
+toowide <- level1bEDI %>% filter(minFeretDiameter > 150)
+# there were 8 ROIs that with minFeretDiameter slightly greater than 150
+# these were mainly Ceratium
+tooarea <- level1bEDI %>% filter(sqrt(Area) > 150)
+toobiovol <- level1bEDI %>% filter(Biovolume^(1/3) > 150)
+
+# level 2 all volume_imaged must be < 5 mL
+toovol <- level2 %>% filter(volume_imaged > 5)
+
+# level 2 make sure no NAs in abundance or biovolume
+abundNA <- level2 %>% filter(is.na(Abundance))
+biovolNA <- level2 %>% filter(is.na(Biovolume))
 
 ```
 
@@ -188,15 +226,14 @@ pkg_id <- "knb-lter-nes.9.1"
 # copy abstract, additional_info, and methods txt files into project_folder
 # or else this next step will produce empty files
 # Because this package will have two tables,
-# this first xlsx does not have attributes for either
-# ALSO FOR TWO TABLES figure out how to have 2 catvars templates
+# this first xlsx does not have attributes or catvars templates
 
 xlsx_to_template(metadata.path = paste0(dir, metadata),
                  output.path = paste0(dir, project_folder),
                  edi.filename = NULL, 
                  rights = "CCBY")
 # # level1b attributes needs separate xlxs
-# # figure out how to rename this so not to be confused with data file
+# # do not confuse with data csv file
 # xlsx_to_template(metadata.path = paste0(dir, level1b_test), 
 #                  output.path = paste0(dir, project_folder),
 #                  edi.filename = level1b_test, 
@@ -206,7 +243,7 @@ xlsx_to_template(metadata.path = paste0(dir, level1b_edi),
                  edi.filename = level1b_edi, 
                  rights = "CCBY")
 # # level2 attributes needs separate xlxs
-# # figure out how to rename this so not to be confused with data file
+# # do not confuse with data csv file
 # xlsx_to_template(metadata.path = paste0(dir, level2_test), 
 #                  output.path = paste0(dir, project_folder),
 #                  edi.filename = level2_test, 
@@ -243,4 +280,4 @@ project_insert(edi_pkg = pkg_id,
                xml.path = paste0(dir, project_folder))
 ```
 
-## Manually check a couple of ROIs in the data product against the IFCB Dashboard
+## Add semantic annotations to EML 2.2
